--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.djcodes.spring</groupId>
 	<artifactId>demo-app</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>demo-app</name>
 	<description>Demo project for Spring Boot</description>
 
