--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     validationQuery: SELECT 1
   jpa:
     hibernate:
-      ddl-auto: 'create-drop'
+      ddl-auto: 'update'
     show-sql: true
     properties.hibernate.dialect: org.hibernate.dialect.MariaDB103Dialect
 
