--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,15 @@ spring:
     password: root
     testWhileIdle: true
     validationQuery: SELECT 1
+    hikari:
+      minimum-idle: 0
+      maximum-pool-size: 15
+      connection-timeout: 10000 #10s
+      idle-timeout: 300000 #5m
+      max-lifetime: 600000 #10m
+      initialization-fail-timeout: -1
+      validation-timeout: 1000 #1s
+    continue-on-error: 'true'
   jpa:
     hibernate:
       ddl-auto: 'update'
