--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
     continue-on-error: 'true'
   jpa:
     hibernate:
-      ddl-auto: 'update'
+      ddl-auto: 'create-drop'
     show-sql: true
     properties.hibernate.dialect: org.hibernate.dialect.MariaDB103Dialect
 
