--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,28 +8,6 @@ app:
       - If you have something good in your life, don't let it go!
       - A chance meeting opens new doors to success and friendship.
 
-spring:
-  datasource:
-    platform: mariadb
-    driverClassName: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/test?autoReconnect=true
-    username: root
-    password: root
-    testWhileIdle: true
-    validationQuery: SELECT 1
-    hikari:
-      minimum-idle: 0
-      maximum-pool-size: 15
-      connection-timeout: 10000 #10s
-      idle-timeout: 300000 #5m
-      max-lifetime: 600000 #10m
-      initialization-fail-timeout: -1
-      validation-timeout: 1000 #1s
-    continue-on-error: 'true'
-  jpa:
-    hibernate:
-      ddl-auto: 'create-drop'
-    show-sql: true
-    properties.hibernate.dialect: org.hibernate.dialect.MariaDB103Dialect
-
-
+logging:
+  level:
+    com: DEBUG
