--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,5 +1,5 @@
-spring:
-  datasource:
-    url: jdbc:h2:mem:test
-    driverClassName: org.h2.Driver
-    properties.hibernate.dialect: org.hibernate.dialect.H2Dialect
+#spring:
+#  datasource:
+#    url: jdbc:h2:mem:test
+#    driverClassName: org.h2.Driver
+#    properties.hibernate.dialect: org.hibernate.dialect.H2Dialect
