--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
   <groupId>com.djcodes.spring</groupId>
   <artifactId>demo-app</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
   <name>demo-app</name>
   <description>Demo project for Spring Boot</description>
 
