--- a/k8s/db-deployment.yaml
+++ b/k8s/db-deployment.yaml
@@ -18,5 +18,16 @@ spec:
           ports:
             - containerPort: 27017
           resources: {}
+          env:
+            - name: MONGO_INITDB_ROOT_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: db-secret
+                  key: username
+            - name: MONGO_INITDB_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: db-secret
+                  key: password
       restartPolicy: Always
 status: {}
