--- a/k8s/demo-app-deployment.yaml
+++ b/k8s/demo-app-deployment.yaml
@@ -14,8 +14,22 @@ spec:
     spec:
       containers:
         - env:
-            - name: SPRING_DATA_MONGODB_URI
-              value: mongodb://db/test
+            - name: SPRING_DATA_MONGODB_HOST
+              value: db
+            - name: SPRING_DATA_MONGODB_PORT
+              value: '27017'
+            - name: SPRING_DATA_MONGODB_DATABASE
+              value: admin
+            - name: SPRING_DATA_MONGODB_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: db-secret
+                  key: username
+            - name: SPRING_DATA_MONGODB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: db-secret
+                  key: password
           image: dhananjay12/demo-app:3.0.0
           imagePullPolicy: Always
           name: demo-app
