--- a/application-dev.yml
+++ b/application-dev.yml
@@ -11,3 +11,11 @@ app:
 logging:
   level:
     com: DEBUG
+
+spring:
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
+      - org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
+      - org.springframework.boot.autoconfigure.data.mongo.MongoRepositoriesAutoConfiguration
+
