--- a/helm/demo-app-file/charts/demo-app-backend/config/demo-app-application.yml
+++ b/helm/demo-app-file/charts/demo-app-backend/config/demo-app-application.yml
@@ -19,3 +19,9 @@ spring:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
       - org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
       - org.springframework.boot.autoconfigure.data.mongo.MongoRepositoriesAutoConfiguration
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
