--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,3 +3,13 @@
 #    url: jdbc:h2:mem:test
 #    driverClassName: org.h2.Driver
 #    properties.hibernate.dialect: org.hibernate.dialect.H2Dialect
+
+app:
+  fortune:
+    source: file
+spring:
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
+      - org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
+      - org.springframework.boot.autoconfigure.data.mongo.MongoRepositoriesAutoConfiguration
