--- a/https/docker-compose.yml
+++ b/https/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   demo-app:
-    image: local:latest
+    image: dhananjay12/demo-app:3.0.0
     environment:
       - SPRING_CONFIG_ADDITIONAL-LOCATION=/config/
     volumes:
