--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         # test against latest update of each major Java version, as well as specific updates of LTS versions:
-        java: [ 8.0.192, 11.0.x]
+        java: [11.0.x, 13]
     # This will loop based on above values
     name: Java ${{ matrix.java }} check
     steps:
