--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,4 +90,5 @@ jobs:
             docker login --username=_ --password $HEROKU_API_KEY $HEROKU_REGISTRY_URL
             heroku container:login
             docker tag dhananjay12/demo-app:latest $HEROKU_REGISTRY_URL/dhananjay12/demo-app
+            docker push $HEROKU_REGISTRY_URL/dhananjay12/demo-app
             heroku container:release demo-app-github --app dhananjay12/demo-app
