--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,11 +18,12 @@ jobs:
       - name: Deploy to Heroku
         env :
             HEROKU_REGISTRY_URL: registry.heroku.com
-            HEROKU_API_KEY : ${{ secrets.HEROKU_API_KEY }}
+            HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+            HEROKU_APP_NAME: demo-app-github
         run : |
             docker login --username=_ --password $HEROKU_API_KEY $HEROKU_REGISTRY_URL
             heroku container:login
             docker pull dhananjay12/demo-app:latest
             docker tag dhananjay12/demo-app:latest registry.heroku.com/demo-app-github/web
             docker push registry.heroku.com/demo-app-github/web
-            heroku container:release demo-app-github --app dhananjay12/demo-app
+            heroku container:release web --app $HEROKU_APP_NAME
