--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,7 @@ jobs:
         run : |
             docker login --username=_ --password $HEROKU_API_KEY $HEROKU_REGISTRY_URL
             heroku container:login
+            heroku create
             docker pull dhananjay12/demo-app:latest
             docker tag dhananjay12/demo-app:latest registry.heroku.com/demo-app-github/web
             docker push registry.heroku.com/demo-app-github/web
