--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,21 +68,20 @@ jobs:
         if: ${{ github.ref == 'refs/heads/master'}}
         run: docker push ${{steps.vars.outputs.image}}:latest
 
-#  deploy:
-#    if: ${{ github.ref == 'refs/heads/master'}}
-#    needs: docker
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Deploy to Heroku
-#        env :
-#            HEROKU_REGISTRY_URL: registry.heroku.com
-#            HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-#            HEROKU_APP_NAME: demo-app-github
-#        run : |
-#            docker login --username=_ --password $HEROKU_API_KEY registry.heroku.com
-#            heroku container:login
-#            docker pull dhananjay12/demo-app:latest
-#            docker tag dhananjay12/demo-app:latest registry.heroku.com/demo-app-github/web
-#            docker push registry.heroku.com/demo-app-github/web
-#            heroku container:run web --app $HEROKU_APP_NAME --port=8080
-#            heroku container:release web --app $HEROKU_APP_NAME
+  deploy:
+    if: ${{ github.ref == 'refs/heads/master'}}
+    needs: docker
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to Heroku
+        env :
+            HEROKU_REGISTRY_URL: registry.heroku.com
+            HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+            HEROKU_APP_NAME: demo-app-github
+        run : |
+            docker login --username=_ --password $HEROKU_API_KEY registry.heroku.com
+            heroku container:login
+            docker pull dhananjay12/demo-app:latest
+            docker tag dhananjay12/demo-app:latest registry.heroku.com/$HEROKU_APP_NAME/web
+            docker push registry.heroku.com/$HEROKU_APP_NAME/web
+            heroku container:release web --app $HEROKU_APP_NAME
