--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
         run: mvn clean verify
 
   sonar:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -44,7 +45,7 @@ jobs:
           -Dsonar.organization=${{ secrets.SONAR_ORG }} -Dsonar.host.url=https://sonarcloud.io
 
   docker:
-    needs: test
+    needs: sonar
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
