--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
         env:
           sonar.projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
           sonar.organization: ${{ secrets.SONAR_ORG }}
-          sonar.host.url: https://sonarcloud.io
+          sonar.host.url: "https://sonarcloud.io"
           SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
         run: |
           mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
