--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,9 +41,9 @@ jobs:
       # Make sure automatic scanning of the project in sonarcloud UI is disable. It can only do via pull or push
       - name: Sonar Cloud scan
         env:
-          sonar.projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
-          sonar.organization: ${{ secrets.SONAR_ORG }}
-          sonar.host.url: "https://sonarcloud.io"
+          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+          SONAR_ORGANIZATION: ${{ secrets.SONAR_ORG }}
+          SONAR_HOST_URL: 'https://sonarcloud.io'
           SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
         run: |
           mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
