--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
     <jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
     <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
     <springdoc-openapi-starter-webmvc-ui.version>2.0.0</springdoc-openapi-starter-webmvc-ui.version>
+    <!-- sonar properties -->
+    <sonar.projectKey>dhananjay12_demo-app</sonar.projectKey>
+    <sonar.organization>dhananjay12</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
   <dependencyManagement>
