--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Initialize Java and Maven
-        uses: dhananjay12/reusable-workflows/init-maven
+        uses: dhananjay12/reusable-workflows/init-maven@main
       - name: Build with Maven
         run: mvn clean verify
 
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Initialize Java and Maven
-        uses: dhananjay12/reusable-workflows/init-maven
+        uses: dhananjay12/reusable-workflows/init-maven@main
       # Make sure automatic scanning of the project in sonarcloud UI is disable. It can only do via pull or push
       - name: Sonar Cloud scan
         env:
@@ -38,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Initialize Java and Maven
-        uses: dhananjay12/reusable-workflows/init-maven
+        uses: dhananjay12/reusable-workflows/init-maven@main
       - name: Prepare variables
         id: vars
         run: |
