--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Initialize Java and Maven
-        uses: dhananjay12/reusable-workflows/init-maven@main
+        uses: dhananjay12/reusable-workflows/.github/actions/init-maven@main
       - name: Build with Maven
         run: mvn clean verify
 
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Initialize Java and Maven
-        uses: dhananjay12/reusable-workflows/init-maven@main
+        uses: dhananjay12/reusable-workflows/.github/actions/init-maven@main
       # Make sure automatic scanning of the project in sonarcloud UI is disable. It can only do via pull or push
       - name: Sonar Cloud scan
         env:
@@ -42,7 +42,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Initialize Java and Maven
-        uses: dhananjay12/reusable-workflows/init-maven@main
+        uses: dhananjay12/reusable-workflows/.github/actions/init-maven@main
       - name: Prepare variables
         id: vars
         run: |
