--- a/.github/workflows/release-rc.yml
+++ b/.github/workflows/release-rc.yml
@@ -1,12 +1,12 @@
 
 name: Release RC on master push
 
-on:
+#on:
   # To manually trigger
-  workflow_dispatch:
-  push:
-    branches:
-      - master
+#  workflow_dispatch:
+#  push:
+#    branches:
+#      - master
 
 jobs:
   release:
