--- a/.github/workflows/release-rc.yml
+++ b/.github/workflows/release-rc.yml
@@ -1,18 +1,18 @@
 
-name: Release RC on master push
+# name: Release RC on master push
 
-#on:
-  # To manually trigger
-#  workflow_dispatch:
-#  push:
-#    branches:
-#      - master
+# #on:
+#   # To manually trigger
+# #  workflow_dispatch:
+# #  push:
+# #    branches:
+# #      - master
 
-jobs:
-  release:
-    uses: dhananjay12/reusable-workflows/.github/workflows/release.yml@main
-    secrets:
-      REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_PASSWORD }}
+# jobs:
+#   release:
+#     uses: dhananjay12/reusable-workflows/.github/workflows/release.yml@main
+#     secrets:
+#       REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+#       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_PASSWORD }}
