--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,4 +56,4 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add pom.xml
           git commit -m "Prepare next development version"
-          git push
+          git push origin HEAD:${{ github.ref }}
