--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,4 +57,4 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add pom.xml
           git commit -m "Prepare next development version"
-          git push origin HEAD:${{ github.ref }}
+          git push --set-upstream origin ${{ github.ref }}
