--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   push:
-    uses: dhananjay12/reusable-workflows/.github/workflows/build.yml@main
+    uses: dhananjay12/reusable-workflows/.github/workflows/release.yml@main
     secrets:
       REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       JFROG_URL: ${{ secrets.JFROG_URL }}
