--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
     secrets:
       REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       JFROG_URL: ${{ secrets.JFROG_URL }}
+      JFROG_PATH: ${{ secrets.JFROG_PATH }}
       JFROG_USERNAME: ${{ secrets.JFROG_USERNAME }}
       JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
